commit 2 ft.footer, python file. index files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <link rel="stylesheet" href="dist/css/style.css" />
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <!-- <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    /> -->
   </head>
   <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
@@ -21,15 +25,15 @@
           <div class="site-header-inner">
             <div class="brand header-brand">
               <h1 class="m-0">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/subhanu-sankar-roy/" target="_blank">
                   <img
-                    class="header-logo-image asset-light"
-                    src="dist/images/logo-light.svg"
+                    class="header-logo-image asset-light rounded-full h-16"
+                    src="dist/images/profile.jpg"
                     alt="Logo"
                   />
                   <img
-                    class="header-logo-image asset-dark"
-                    src="dist/images/logo-dark.svg"
+                    class="header-logo-image asset-dark rounded-full h-16"
+                    src="dist/images/profile.jpg"
                     alt="Logo"
                   />
                 </a>
@@ -371,36 +375,33 @@
         <div class="container">
           <div class="site-footer-inner">
             <div class="brand footer-brand">
-              <a href="#">
-                <img
-                  class="asset-light"
-                  src="dist/images/logo-light.svg"
-                  alt="Logo"
-                />
-                <img
-                  class="asset-dark"
-                  src="dist/images/logo-dark.svg"
-                  alt="Logo"
-                />
-              </a>
+                <a href="https://www.linkedin.com/in/subhanu-sankar-roy/" target="_blank">
+                    <img
+                      class="header-logo-image asset-light rounded-full h-16"
+                      src="dist/images/profile.jpg"
+                      alt="Logo"
+                    />
+                    <img
+                      class="header-logo-image asset-dark rounded-full h-16"
+                      src="dist/images/profile.jpg"
+                      alt="Logo"
+                    />
+                  </a>
             </div>
             <ul class="footer-links list-reset">
               <li>
-                <a href="#">Contact</a>
+                <a href="mailto:subhanu12@gmail.com">Contact</a>
               </li>
               <li>
-                <a href="#">About us</a>
+                <a href="https://www.linkedin.com/in/subhanu-sankar-roy/" target="_blank">About Me</a>
               </li>
               <li>
-                <a href="#">FAQ's</a>
-              </li>
-              <li>
-                <a href="#">Support</a>
+                <a href="https://github.com/SubhanuSRoy" target="_blank">Github</a>
               </li>
             </ul>
             <ul class="footer-social-links list-reset">
               <li>
-                <a href="#">
+                <!-- <a href="#">
                   <span class="screen-reader-text">Facebook</span>
                   <svg
                     width="16"
@@ -412,10 +413,10 @@
                       fill="#FFF"
                     />
                   </svg>
-                </a>
+                </a> -->
               </li>
               <li>
-                <a href="#">
+                <!-- <a href="#">
                   <span class="screen-reader-text">Twitter</span>
                   <svg
                     width="16"
@@ -427,10 +428,10 @@
                       fill="#FFF"
                     />
                   </svg>
-                </a>
+                </a> -->
               </li>
               <li>
-                <a href="#">
+                <!-- <a href="#">
                   <span class="screen-reader-text">Google</span>
                   <svg
                     width="16"
@@ -442,11 +443,11 @@
                       fill="#FFF"
                     />
                   </svg>
-                </a>
+                </a> -->
               </li>
             </ul>
             <div class="footer-copyright">
-              &copy; 2018 Switch, all rights reserved
+              &copy; 2022 Subhanu Sankar Roy, all rights reserved
             </div>
           </div>
         </div>
