commit 6 ft. responsive fixes

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           </div>
         </section>
 
-        <section class="cta section">
+        <section class="cta section" style="">
           <div class="container-sm">
             <div class="cta-inner section-inner">
               <div class="cta-header text-center">
@@ -307,11 +307,6 @@
                       class="features-illustration asset-dark"
                       src="dist/images/features-illustration-top-dark.svg"
                       alt="Feature illustration top"
-                    />
-                    <img
-                      class="features-illustration asset-light"
-                      src="dist/images/features-illustration-light.svg"
-                      alt="Feature illustration"
                     />
                     <img
                       class="features-box asset-light"
@@ -343,11 +338,7 @@
                       src="dist/images/features-illustration-top-dark.svg"
                       alt="Feature illustration top"
                     />
-                    <img
-                      class="features-illustration asset-light"
-                      src="dist/images/features-illustration-light.svg"
-                      alt="Feature illustration"
-                    />
+                    
                     <img
                       class="features-box asset-light"
                       src="dist/images/python_code.png"
